# aecium

./: README.md
.github/workflows/: build.yml
crates/aecium/: Cargo.toml
crates/aecium/src/: cli.rs  encoding.rs  lex.rs  main.rs  name.rs  path.rs  scope.rs  source.rs  syntax.rs  token.rs
crates/derive-rustc-index/: Cargo.toml
crates/derive-rustc-index/src/: internal.rs  lib.rs
